--- a/charts/platform-base/charts/tp-cp-core/templates/tsc-dns-cm.yaml
+++ b/charts/platform-base/charts/tp-cp-core/templates/tsc-dns-cm.yaml
@@ -43,6 +43,7 @@ data:
   TP_CP_BW6_HOST: {{ include "tpcontrol-plane.consts.tpCpBW6ServiceName" . }}
   TP_CP_FLOGO_HOST: {{ include "tpcontrol-plane.consts.tpCpFLOGOServiceName" . }}
   TP_CP_BE_HOST: {{ include "tpcontrol-plane.consts.tpCpBEServiceName" . }}
+  TP_CP_EMS_HOST: {{ include "tpcontrol-plane.consts.tpCpEMSServiceName" . }}
   DOC_BASE_URL: {{ include "tpcontrol-plane.consts.docBaseUrl" . }}
   TP_CP_O11Y_HOST: {{ include "tpcontrol-plane.consts.tpCpO11yServiceName" . }}
 
