--- a/charts/platform-base/charts/tp-cp-prometheus/values.yaml
+++ b/charts/platform-base/charts/tp-cp-prometheus/values.yaml
@@ -75,9 +75,6 @@ global:
 rbac:
   create: false
 
-podSecurityPolicy:
-  enabled: false
-
 imagePullSecrets: []
 # - name: "image-pull-secret"
 
@@ -122,7 +119,7 @@ configmapReload:
     ##
     enabled: true
     image:
-      tag: v0.80.1
+      tag: v0.84.0
     ## configmap-reload container name
     ##
     name: configmap-reload
@@ -233,7 +230,7 @@ server:
   # OR for adding OAuth authentication to Prometheus
   #   sidecarContainers:
   #     oauth-proxy:
-  #       image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.2
+  #       image: quay.io/oauth2-proxy/oauth2-proxy:v7.9.0
   #       args:
   #       - --upstream=http://127.0.0.1:9090
   #       - --http-address=0.0.0.0:8081
@@ -286,7 +283,7 @@ server:
   ## Prometheus server container image
   ##
   image:
-    tag: "v2.53.5"
+    tag: "v3.5.0"
     pullPolicy: IfNotPresent
 
   ## Prometheus server command
@@ -296,6 +293,9 @@ server:
   ## prometheus server priorityClassName
   ##
   priorityClassName: ""
+  ## prometheus server runtimeClassName
+  ##
+  runtimeClassName: ""
 
   ## EnableServiceLinks indicates whether information about services should be injected
   ## into pod's environment variables, matching the syntax of Docker links.
@@ -408,35 +408,11 @@ server:
 
   ## Additional Prometheus server Volume mounts
   ##
-  extraVolumeMounts:
-    - name: prom-volume
-      mountPath: /etc/prometheus-community/
-    - name: server-ds-vol
-      mountPath: /etc/prometheus-community/discovery/
-      readOnly: true
-      subPath: hawk/discovery
-    - name: server-ds-vol
-      mountPath: /etc/prometheus-community/o11y/
-      readOnly: true
-      subPath: o11y/discovery
-    - name: server-ds-vol
-      mountPath: /prometheus
-      subPath: hawk/prometheus
-      readOnly: false
-    - name: server-ds-vol
-      mountPath: /prometheus/rules
-      subPath: alerts/prometheus/rules
-      readOnly: false
+  extraVolumeMounts: []
+
   ## Additional Prometheus server Volumes
   ##
-  extraVolumes:
-    - name: prom-volume
-      configMap:
-        defaultMode: 420
-        name: prom-server-conf
-    - name: server-ds-vol
-      persistentVolumeClaim:
-        claimName: control-plane-pvc
+  extraVolumes: []
 
   ## Additional Prometheus server hostPath mounts
   ##
@@ -463,6 +439,12 @@ server:
     #   secretName: prom-secret-files
     #   readOnly: true
 
+  ## Prometheus server configuration from a secret
+  ## Do not set both `configMapOverrideName` and `configFromSecret` simultaneously.
+  ## Use either `configMapOverrideName` or `configFromSecret`.
+  ## If `configFromSecret` is defined, a ConfigMap resource will NOT be generated.
+  configFromSecret: ""
+
   ## ConfigMap override where fullname is {{.Release.Name}}-{{.Values.server.configMapOverrideName}}
   ## Defining configMapOverrideName will cause templates/server-configmap.yaml
   ## to NOT generate a ConfigMap resource
@@ -480,9 +462,7 @@ server:
     ##
     enabled: false
 
-    # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
-    # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
-    # ingressClassName: nginx
+    ingressClassName: ""
 
     ## Prometheus server Ingress annotations
     ##
@@ -523,6 +503,54 @@ server:
     #   - secretName: prometheus-server-tls
     #     hosts:
     #       - prometheus.domain.com
+
+  ## route (map) allows configuration of HTTPRoute resources
+  ## Requires Gateway API resources and suitable controller installed within the cluster
+  ## Ref. https://gateway-api.sigs.k8s.io/guides/http-routing/
+  route:
+    main:
+      ## Enable this route
+      enabled: false
+
+      ## ApiVersion set by default to "gateway.networking.k8s.io/v1"
+      apiVersion: ""
+      ## kind set by default to HTTPRoute
+      kind: ""
+
+      ## Annotations to attach to the HTTPRoute resource
+      annotations: {}
+      ## Labels to attach to the HTTPRoute resource
+      labels: {}
+
+      ## ParentRefs refers to resources this HTTPRoute is to be attached to (Gateways)
+      parentRefs: []
+        # - name: contour
+        #   sectionName: http
+
+      ## Hostnames (templated) defines a set of hostnames that should match against the HTTP Host
+      ## header to select a HTTPRoute used to process the request
+      hostnames: []
+        # - my.example.com
+
+      ## additionalRules (templated) allows adding custom rules to the route
+      additionalRules: []
+
+      ## Filters define the filters that are applied to requests that match
+      ## this rule
+      filters: []
+
+      ## Matches define conditions used for matching the rule against incoming
+      ## HTTP requests
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
+
+      ## httpsRedirect adds a filter for redirecting to https (HTTP 301 Moved Permanently).
+      ## To redirect HTTP traffic to HTTPS, you need to have a Gateway with both HTTP and HTTPS listeners.
+      ## Matches and filters do not take effect if enabled.
+      ## Ref. https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/
+      httpsRedirect: false
 
   ## Server Deployment Strategy type
   strategy:
@@ -653,8 +681,10 @@ server:
     # volumeName: ""
 
   emptyDir:
-    ## Prometheus server emptyDir volume size limit
+    ## Prometheus server emptyDir volume
+    ## Configure size limit and medium
     ##
+    medium: ""
     sizeLimit: ""
 
   ## Annotations to be added to Prometheus server pods
@@ -673,20 +703,6 @@ server:
   ## Prometheus AlertManager configuration
   ##
   alertmanagers: []
-
-  ## Specify if a Pod Security Policy for node-exporter must be created
-  ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
-  ##
-  podSecurityPolicy:
-    annotations: {}
-      ## Specify pod annotations
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
-      ##
-      # seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
-      # seccomp.security.alpha.kubernetes.io/defaultProfileName: 'docker/default'
-      # apparmor.security.beta.kubernetes.io/defaultProfileName: 'runtime/default'
 
   ## Use a StatefulSet if replicaCount needs to be greater than 1 (see below)
   ##
