--- a/charts/platform-base/charts/tp-cp-auditsafe/templates/auditsafe-configmap.yaml
+++ b/charts/platform-base/charts/tp-cp-auditsafe/templates/auditsafe-configmap.yaml
@@ -11,6 +11,7 @@ metadata:
   labels:
     {{- include "tp-cp-auditsafe.shared.labels.standard" . | nindent 4 }}
 data:
-  TCTA_WEB_SERVER_DB_POOL_SIZE: "20"
   springProfilesActive: 'aws'
   tasJavaOpts: '-Xms1024m -Xmx4096m'
+  tasMaxReadDBPoolSize: "5"
+  tasMaxWriteDBPoolSize: "5"
